--- a/firmware/KilnController/ReadMe.adoc
+++ b/firmware/KilnController/ReadMe.adoc
@@ -66,7 +66,9 @@ Add the bill of the materials you need for this project.
 |===
 | ID | Part name               | Part number | Quantity
 | A1 | Arduino UNO             | UNO         | 1
+| R1 | Resitor 10kΩ            | -           | 1
 | D1 | 14-segment LED Backpack | HT16K33     | 1
+| S1 | Push button             | -           | 1
 |===
 
 
